--- a/配置交叉编译链.md
+++ b/配置交叉编译链.md
@@ -1,148 +1,32 @@
-这个错误表明 CMake 无法找到指定的工具链文件，并且没有正确设置构建工具。以下是完整的解决方案：
-
-### 1. 创建 ARM64 交叉编译工具链文件
-
-在项目根目录创建 `toolchain.cmake` 文件：
-
-```cmake
-# /root/work/player/toolchain.cmake
-set(CMAKE_SYSTEM_NAME Linux)
-set(CMAKE_SYSTEM_PROCESSOR aarch64)
-
-# 指定交叉编译器路径
-set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
-set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
-
-# 指定库搜索路径
-set(CMAKE_FIND_ROOT_PATH /usr/aarch64-linux-gnu)
-
-# 搜索规则设置
-set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
-set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
-set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
-```
-
-### 2. 确保已安装必要的交叉编译工具
-
-在 x86 主机上执行：
-
+# 交叉编译arm
 ```bash
+sudo dpkg --add-architecture arm64
 sudo apt update
-sudo apt install -y \
-    gcc-aarch64-linux-gnu \
-    g++-aarch64-linux-gnu \
-    build-essential \
-    cmake \
-    make
-```
 
-### 3. 修正 CMake 调用命令
+apt install -y libdrm-dev:arm64
 
-修改您的构建命令为：
+# 安装字体支持库
+sudo apt-get install libfreetype-dev:arm64
+# curl
+apt install libcurl4-openssl-dev:arm64
 
-```bash
-cd /root/work/player
-mkdir -p build && cd build
-cmake \
-    -DCMAKE_TOOLCHAIN_FILE=../toolchain.cmake \
-    -DCMAKE_BUILD_TYPE=Debug \
-    -DCMAKE_CXX_STANDARD=17 \
-    -DCMAKE_MAKE_PROGRAM=/usr/bin/make \
-    ..
-```
+apt install libqrencode4:arm64 libqrencode-dev:arm64
 
-### 4. 验证工具链配置
+apt install libjsoncpp-dev:arm64
 
-```bash
-# 检查编译器是否可用
-aarch64-linux-gnu-gcc --version
-aarch64-linux-gnu-g++ --version
+apt install libwebp-dev:arm64
+apt install libssl-dev:arm64
 
-# 检查make是否安装
-which make
-```
+apt install libpaho-mqttpp-dev:arm64
+apt install libpaho-mqtt-dev:arm64
 
-### 5. 完整构建流程
+apt install -y libjpeg-dev:arm64 libpng-dev:arm64 curl:arm64
 
-```bash
-# 清理并重新构建
-cd /root/work/player
-rm -rf build && mkdir build && cd build
 
-# 配置
-cmake \
-    -DCMAKE_TOOLCHAIN_FILE=../toolchain.cmake \
-    -DCMAKE_BUILD_TYPE=Debug \
-    -DCMAKE_CXX_STANDARD=17 \
-    -DCMAKE_MAKE_PROGRAM=/usr/bin/make \
-    ..
 
-# 编译
+mkdir build-aarch64 && cd build-aarch64
+cmake -DCMAKE_TOOLCHAIN_FILE=../aarch64-toolchain.cmake ..
 make -j$(nproc)
+
+
 ```
-
-### 6. 常见问题解决
-
-#### 问题1：找不到工具链文件
-```text
-Could not find toolchain file: ../toolchain.cmake
-```
-解决方案：
-- 确保 `toolchain.cmake` 文件路径正确
-- 使用绝对路径：`-DCMAKE_TOOLCHAIN_FILE=/root/work/player/toolchain.cmake`
-
-#### 问题2：缺少 make
-```text
-CMake Error: CMake was unable to find a build program corresponding to "Unix Makefiles"
-```
-解决方案：
-```bash
-sudo apt install make
-```
-
-#### 问题3：库路径错误
-```text
-Could NOT find XXX (missing: XXX_LIBRARY)
-```
-解决方案：
-- 安装ARM64库：`sudo apt install libxxx-dev:arm64`
-- 在 `toolchain.cmake` 中添加：
-  ```cmake
-  list(APPEND CMAKE_PREFIX_PATH "/usr/aarch64-linux-gnu")
-  ```
-
-### 7. VSCode 配置建议
-
-在 `.vscode/cmake-kits.json` 中添加：
-
-```json
-{
-  "name": "ARM64 GCC",
-  "toolchainFile": "${workspaceFolder}/toolchain.cmake",
-  "compilers": {
-    "C": "/usr/bin/aarch64-linux-gnu-gcc",
-    "C++": "/usr/bin/aarch64-linux-gnu-g++"
-  },
-  "preferredGenerator": {
-    "name": "Unix Makefiles"
-  }
-}
-```
-
-### 8. 验证生成的可执行文件
-
-```bash
-# 检查文件架构
-file build/eplayer
-# 应显示：ELF 64-bit LSB executable, ARM aarch64
-
-# 测试运行（需要qemu）
-sudo apt install qemu-user-static
-qemu-aarch64-static build/eplayer
-```
-
-通过以上步骤，您应该可以成功在x86主机上交叉编译ARM64架构的程序。如果仍有问题，请提供：
-1. `ls -l /usr/bin/aarch64-linux-gnu-*` 的输出
-2. `cat /root/work/player/toolchain.cmake` 的内容
-3. 完整的CMake错误日志
